Refactor simulation configuration to load parameters from properties file and update shader resource paths